--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3420",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3420"
   },
   "dependencies": {
     "motion": "^12.23.24",
